--- a/i3/config
+++ b/i3/config
@@ -25,6 +25,7 @@ exec --no-startup-id xinput --set-prop 14 'libinput Accel Profile Enabled' 0, 1
 exec --no-startup-id xfsettingsd
 exec --no-startup-id pulseaudio --start
 exec --no-startup-id ~/.fehbg
+exec --no-startup-id ibus-daemon -drx
 
 bindsym $mod+Return exec $wm_setting_app_terminal
 bindsym Ctrl+space exec $wm_setting_app_launcher
